nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: demo-bma
  annotations:
    kubernetes.io/ingress.class: nginx   
spec:
  rules:
  - host: labs-1.bmait.com
    http:
      paths:
      - backend:
          service:
            name: nginx-app
            port:
              number: 80
        path: /
        pathType: Prefix
